--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ And this is how it goes down!</p>
 <br></p>
 </li>
 </ol>
-<p><img src="https://images.squarespace-cdn.com/content/v1/5e1f51eb1bb1681137ea90b8/1585616703834-6WW2LXZNBZE855UPL6B0/image-asset.jpeg?format%3D1500w" alt="&quot;hello&quot;"></p>
+<p><img src="https://images.squarespace-cdn.com/content/v1/5e1f51eb1bb1681137ea90b8/1585616703834-6WW2LXZNBZE855UPL6B0/image-asset.jpeg?format%3D1500w" alt="&quot;pathwayimg&quot;"></p>
 <hr>
 <h3>SMACK – SIMPLIFIED MANDATORY ACCESS CONTROL</h3>
 <p>The second LSM developer to be merged into the Linux kernel was Simplified Mandatory Access Control (SMACK), which uses an attribute-based MAC implementation similar to SELinux (as part of the 2.6.24 release). SMACK was created for embedded systems and is easier to manage than SELinux. The MAC implementation used by Automotive Grade Linux and Tizen by default is called SMACK.</p>
